cleanup sonar lint complaints